--- a/back-end/Auth/Dockerfile
+++ b/back-end/Auth/Dockerfile
@@ -1,7 +1,7 @@
 # Dockerfile para o serviço de autenticação
-FROM node:14
+FROM node:20
 
-WORKDIR /app
+WORKDIR /Auth
 
 # Copiar o package.json e instalar as dependências
 COPY package.json ./
