--- a/back-end/Maestro/package.json
+++ b/back-end/Maestro/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0",
-    "mongoose": "^8.14.1"
+    "axios": "^1.9.0",
+    "express": "^5.1.0"
   }
 }
