--- a/back-end/Auth/Dockerfile
+++ b/back-end/Auth/Dockerfile
@@ -1,10 +1,10 @@
 # Dockerfile para o serviço de autenticação
 FROM node:20
 
-WORKDIR /Auth
+WORKDIR /Auth/src
 
 # Copiar o package.json e instalar as dependências
-COPY package.json ./
+COPY src/package*.json ./
 RUN npm install
 
 # Copiar o restante do código
@@ -14,4 +14,4 @@ COPY . .
 EXPOSE 4000
 
 # Iniciar o serviço
-CMD ["node", "authService.js"]
+CMD ["npx", "nodemon", "authService.js"]
