--- a/back-end/Maestro/Dockerfile
+++ b/back-end/Maestro/Dockerfile
@@ -1,17 +1,14 @@
-# Dockerfile para o serviço orquestrador
 FROM node:20
 
-WORKDIR /Maestro
+WORKDIR /Maestro/src
 
-# Copiar o package.json e instalar as dependências
-COPY package.json ./
+# Copy only package files first (to leverage Docker cache)
+COPY src/package*.json ./
 RUN npm install
 
-# Copiar o restante do código
-COPY . .
+# Copy the rest of the source code
+COPY src/ .
 
-# Expõe a porta do orquestrador
 EXPOSE 3000
 
-# Iniciar o serviço orquestrador
-CMD ["node", "maestroService.js"]
+CMD ["npx", "nodemon", "maestroService.js"]
