Serviço de Notificações Funcional
Falta apenas a autenticação de 2 fatores e mais tarde implementação com o serviço das tarefas

--- a/back-end/Notif/Dockerfile
+++ b/back-end/Notif/Dockerfile
@@ -1,7 +1,7 @@
-# Dockerfile para o serviço de autenticação
+# Dockerfile para o serviço de notificação
 FROM node:20
 
-WORKDIR /Auth/src
+WORKDIR /Notif/src
 
 # Copiar o package.json e instalar as dependências
 COPY src/package*.json ./
@@ -10,8 +10,8 @@ RUN npm install
 # Copiar o restante do código
 COPY . .
 
-# Expõe a porta do serviço de autenticação
-EXPOSE 4000
+# Expõe a porta do serviço de notificações
+EXPOSE 6000
 
 # Iniciar o serviço
-CMD ["npx", "nodemon", "authService.js", "-L"]
+CMD ["npx", "nodemon", "notifService.js", "-L"]
