--- a/back-end/Auth/src/package.json
+++ b/back-end/Auth/src/package.json
@@ -2,9 +2,9 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "authService.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node authService.js"
   },
   "author": "",
   "license": "ISC",
