--- a/back-end/Tasks/src/package.json
+++ b/back-end/Tasks/src/package.json
@@ -2,9 +2,9 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "taskService.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon taskService.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "pg": "^8.16.0",
+    "sequelize": "^6.37.7"
   }
 }
