--- a/back-end/Tasks/src/package.json
+++ b/back-end/Tasks/src/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.6.1",
     "mongoose": "^8.14.1",
+    "node-cron": "^4.0.7",
     "nodemon": "^3.1.10",
     "pg": "^8.16.0",
     "sequelize": "^6.37.7"
