--- a/back-end/Ks/notif-deployment.yaml
+++ b/back-end/Ks/notif-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: notif
           image: notif-service
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 6000
           env:
