--- a/back-end/Ks/deployment.yaml
+++ b/back-end/Ks/deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: auth
           image: auth-service
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 4000
 ---
