--- a/back-end/Ks/maestro-deployment.yaml
+++ b/back-end/Ks/maestro-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: maestro
           image: maestro-service
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3000
 ---
