--- a/back-end/Ks/tasks-deployment.yaml
+++ b/back-end/Ks/tasks-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: tasks
           image: task-service
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 7000
 ---
