--- a/back-end/Ks/user-deployment.yaml
+++ b/back-end/Ks/user-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: user
           image: user-service
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 5000
 ---
