--- a/back-end/Ks/auth-deployment.yaml
+++ b/back-end/Ks/auth-deployment.yaml
@@ -1,37 +1,38 @@
+# AUTH SERVICE - Deployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: user-service
+  name: auth-service
   labels:
-    app: user-service
+    app: auth-service
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: user-service
+      app: auth-service
   template:
     metadata:
       labels:
-        app: user-service
+        app: auth-service
     spec:
       containers:
-        - name: user-service
-          image: user-service:latest
+        - name: auth-service
+          image: auth-service:latest
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
-              containerPort: 5000
-
+              containerPort: 4000
 ---
+# AUTH SERVICE - Service
 apiVersion: v1
 kind: Service
 metadata:
-  name: user-service
+  name: auth-service
 spec:
   selector:
-    app: user  
+    app: auth-service
   ports:
     - name: http
-      port: 5000
-      targetPort: 5000
+      port: 4000
+      targetPort: 4000
   type: ClusterIP
