--- a/back-end/Ks/postgres.yaml
+++ b/back-end/Ks/postgres.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres
+  labels:
+    app: postgres
 spec:
   replicas: 1
   selector:
@@ -15,6 +17,8 @@ spec:
       containers:
         - name: postgres
           image: postgres:latest
+          ports:
+            - containerPort: 5432
           env:
             - name: POSTGRES_USER
               value: "joaomiko"
@@ -22,11 +26,9 @@ spec:
               value: "joaogoodman"
             - name: POSTGRES_DB
               value: "microservicos"
-          ports:
-            - containerPort: 5432
           volumeMounts:
-            - mountPath: /var/lib/postgresql/data
-              name: postgres-storage
+            - name: postgres-storage
+              mountPath: /var/lib/postgresql/data
       volumes:
         - name: postgres-storage
           emptyDir: {}
@@ -35,11 +37,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres-service
+  labels:
+    app: postgres
 spec:
   selector:
     app: postgres
   ports:
-    - protocol: TCP
+    - name: db
+      protocol: TCP
       port: 5432
       targetPort: 5432
   type: ClusterIP
