--- a/back-end/Ks/tasks-deployment.yaml
+++ b/back-end/Ks/tasks-deployment.yaml
@@ -1,4 +1,3 @@
-# TASK SERVICE - Deployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,7 +13,7 @@ spec:
     metadata:
       labels:
         app: task-service
-    spec:
+    spec:   # 👈 FIXED: This now properly contains the containers block
       containers:
         - name: task-service
           image: task-service:latest
@@ -22,8 +21,18 @@ spec:
           ports:
             - name: http
               containerPort: 7000
+          env:
+            - name: DB_HOST
+              value: "postgres-service"
+            - name: DB_PORT
+              value: "5432"
+            - name: DB_NAME
+              value: "microservicos"
+            - name: DB_USER
+              value: "joaomiko"
+            - name: DB_PASS
+              value: "joaogoodman"
 ---
-# TASK SERVICE - Service
 apiVersion: v1
 kind: Service
 metadata:
