--- a/back-end/Ks/user-deployment.yaml
+++ b/back-end/Ks/user-deployment.yaml
@@ -21,7 +21,17 @@ spec:
           ports:
             - name: http
               containerPort: 5000
-
+          env:
+            - name: DB_HOST
+              value: "postgres-service"
+            - name: DB_PORT
+              value: "5432"
+            - name: DB_NAME
+              value: "microservicos"
+            - name: DB_USER
+              value: "joaomiko"
+            - name: DB_PASS
+              value: "joaogoodman"
 ---
 apiVersion: v1
 kind: Service
@@ -29,7 +39,7 @@ metadata:
   name: user-service
 spec:
   selector:
-    app: user  
+    app: user-service
   ports:
     - name: http
       port: 5000
