--- a/back-end/Maestro/Dockerfile
+++ b/back-end/Maestro/Dockerfile
@@ -1,14 +1,17 @@
 FROM node:20
 
-WORKDIR /Maestro/src
+# Set to a conventional working directory
+WORKDIR /usr/src/app
 
-# Copy only package files first (to leverage Docker cache)
+# Install dependencies
 COPY src/package*.json ./
 RUN npm install
 
-# Copy the rest of the source code
+# Copy rest of the source
 COPY src/ .
 
+# Expose the port
 EXPOSE 3000
 
+# Start the service
 CMD ["npx", "nodemon", "maestroService.js", "-L"]
