Alterados Comentários do Dockerfile

--- a/back-end/Auth/Dockerfile
+++ b/back-end/Auth/Dockerfile
@@ -2,13 +2,15 @@ FROM node:20
 
 WORKDIR /usr/src/app
 
-# Copy dependencies files first to leverage Docker layer cache
+# Copiar o package.json e instalar as dependências Node.js
 COPY src/package*.json ./
 RUN npm install
 
-# Copy the rest of the application code
+# Copiar o restante do código
 COPY src/ .
 
+# Expõe a porta do serviço de autenticação
 EXPOSE 4000
 
+# Iniciar o Serviço de Autenticação
 CMD ["npx", "nodemon", "authService.js", "-L"]
