--- a/back-end/User/Dockerfile
+++ b/back-end/User/Dockerfile
@@ -2,16 +2,18 @@ FROM node:20
 
 WORKDIR /usr/src/app
 
-# Install PostgreSQL client
+# Instalar PostgreSQL client
 RUN apt-get update && apt-get install -y postgresql-client
 
-# Copy only the package files first to install dependencies
+# Copiar o package.json e instalar as dependências Node.js
 COPY src/package*.json ./
 RUN npm install
 
-# Then copy the rest of the code from src/
+# Copiar o restante do código
 COPY src/ .
 
+# Expõe a porta do serviço de Utilizadores
 EXPOSE 5000
 
+# Iniciar o Serviço de Utilizadores
 CMD ["npx", "nodemon", "userService.js", "-L"]
