--- a/back-end/Maestro/Dockerfile
+++ b/back-end/Maestro/Dockerfile
@@ -1,17 +1,16 @@
 FROM node:20
 
-# Set to a conventional working directory
 WORKDIR /usr/src/app
 
-# Install dependencies
+# Copiar o package.json e instalar as dependências Node.js
 COPY src/package*.json ./
 RUN npm install
 
-# Copy rest of the source
+# Copiar o restante do código
 COPY src/ .
 
-# Expose the port
+# Expõe a porta do serviço Maestro
 EXPOSE 3000
 
-# Start the service
+# Iniciar o Serviço Maestro
 CMD ["npx", "nodemon", "maestroService.js", "-L"]
